Fixed UploadField width (same as textual fields)
Was getting too wide due to padding which isn't applied
to other fields (e.g. TextField)

--- a/scss/UploadField.scss
+++ b/scss/UploadField.scss
@@ -27,7 +27,7 @@
 	.middleColumn {
 		// TODO .middleColumn styling should probably be theme specific (eg cms ui will look different than blackcandy)
 		// so we should move this style into the cms and black candy files
-		width: 526px;
+		width: 510px;
 		padding: 0;
 		background: #fff;
 		border: 1px solid lighten($color-medium-separator, 20%);
